--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -1,22 +1,161 @@
 .header {
-    position: fixed;
-    top: 0;
+    background-image: url(../images/header/topbar.jpg);
     width: 100%;
-    background-color: #fff;
-    height: 52px;
-    border-bottom: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    z-index: 99;
+    height: 10px;
+    position: fixed;
 }
 
-.navbar {
+.navbar__pc {
     display: flex;
     justify-content: space-between;
     max-width: 1120px;
     margin: 0 auto;
 }
 
-.navbar__logo {
-    width: 100px;
+.navbar__logo img {
+    width: 160px;
+    height: 40px;
+    margin-top: 30px;
+    margin-left: 20px;
     cursor: pointer;
+}
+.navbar__list {
+    display: flex;
+}
+.navbar__list .navbar__item {
+    position: relative;
+    display: inline-block;
+    margin-right: 40px;
+    cursor: pointer;
+}
+.navbar__list .navbar__item a {
+    color: #4a4a4a;
+    text-decoration: none;
+    line-height: 100px;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.navbar__btn {
+    margin-top: 30px;
+}
+.navbar__btn button {
+    background: #ffffff;
+    border: 2px solid #4a4a4a;
+    border-radius: 89px;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.12em;
+    height: 40px;
+    width: 124px;
+    font-size: 15px;
+    cursor: pointer;
+}
+/* mobile */
+.nav__bars-btn {
+    display: none;
+}
+.nav__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+}
+.navbar__mobile {
+    position: fixed;
+    top: 29px;
+    right: 128px;
+    width: 120px;
+    max-width: 100%;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgb(0 0 0 / 50%);
+    float: right;
+    text-align: center;
+    transform: translateX(250px);
+}
+
+.navbar__mobile-list {
+    position: relative;
+    display: inline-block;
+    margin-right: 40px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.navbar__mobile-item a {
+    color: #4a4a4a;
+    text-decoration: none;
+    line-height: 40px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.nav__input:checked ~ .nav__overlay {
+    display: block;
+}
+
+.nav__input:checked ~ .navbar__mobile {
+    transform: translateX(127px);
+}
+
+.header__content {
+    margin-top: 18px;
+    background: #f5f8ff;
+    padding: 40px;
+    position: relative;
+}
+.header__content h2 {
+    font-family: "DM Serif Text";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 56px;
+}
+.header__content p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    letter-spacing: 0.01em;
+    margin-top: 28px;
+}
+.nav_btn-content {
+    background: #ffffff;
+    border: 4px solid #ef8094;
+    box-sizing: border-box;
+    border-radius: 300px;
+    width: 183px;
+    height: 61px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+.box__image {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+@media (max-width: 740px) {
+    .nav__bars-btn {
+        position: absolute;
+        right: 20px;
+        top: 31px;
+        display: block;
+    }
+    .navbar__list {
+        display: none;
+    }
+    .navbar__btn {
+        display: none;
+    }
 }
