--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -3,7 +3,7 @@
 .header {
     background-image: url(../images/header/topbar.jpg);
     width: 100%;
-    height: 10px;
+    background-repeat: no-repeat;
 }
 
 .navbar__pc {
@@ -156,6 +156,9 @@
     width: 300px;
     margin-top: 30px;
 }
+
+/* CSS for Pick your plans section */
+
 @media (max-width: 740px) {
     .nav__bars-btn {
         display: block;
