Add styles for social post section

--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -269,6 +269,55 @@
     border-radius: 300px;
     width: 284px;
     height: 61px;
+    cursor: pointer;
+}
+/* CSS for social post */
+.content__social-post {
+    background-color: #f5f8ff;
+}
+.content__social-post h2 {
+    font-family: "DM Serif Text";
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+    padding: 30px;
+}
+.list__social-post {
+    display: flex;
+    flex-direction: column;
+}
+.main__social-post {
+    max-width: 306px;
+    margin: auto;
+    margin-top: 30px;
+}
+.main__social-post p {
+    font-family: "DM Sans";
+    font-size: 22px;
+    line-height: 29px;
+    letter-spacing: 0.01em;
+    margin-top: 20px;
+}
+.follow-btn {
+    margin: 90px 0px 100px 0px;
+    text-align: center;
+}
+.follow-btn button {
+    font-family: "DM Sans";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    background: #ef8094;
+    border: 4px solid #ef8094;
+    box-sizing: border-box;
+    border-radius: 300px;
+    width: 284px;
+    height: 61px;
+    cursor: pointer;
+    color: #fff;
 }
 @media (max-width: 740px) {
     .nav__bars-btn {
