--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -319,6 +319,76 @@
     cursor: pointer;
     color: #fff;
 }
+/*  */
+.footer-container {
+    background: #eeeeee;
+    border: 2px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 6px;
+    padding: 17px;
+    margin: 15px;
+}
+.footer-container__top-side {
+    display: flex;
+}
+.footer-container__top-side .top-side__logo {
+    width: 100px;
+    height: 30px;
+}
+.icon {
+    display: none;
+}
+.footer-container__center-site {
+    display: flex;
+    flex-wrap: wrap;
+}
+.center-site__upbox {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    letter-spacing: 0.12em;
+    width: 49%;
+    margin-right: 1%;
+}
+.center-site__upbox h3 {
+    font-family: "DM Sans";
+    font-size: 16px;
+    line-height: 21px;
+}
+.center-site__upbox:nth-child(1) {
+    text-transform: uppercase;
+}
+.center-site__upbox a {
+    text-decoration: none;
+    color: #000;
+    font-family: "DM Sans";
+    font-size: 12px;
+    line-height: 16px;
+    text-transform: capitalize;
+    margin-top: 10px;
+}
+.footer-container__bottom-side {
+    border-top: 1px solid #c4c4c4;
+    margin-top: 20px;
+    padding-top: 10px;
+}
+.bottom-side__title {
+    font-family: "DM Sans";
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.12em;
+}
+.bottom-side__desc {
+    margin-top: 10px;
+}
+.bottom-side__desc p {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 14px;
+    letter-spacing: 0.12em;
+}
 @media (max-width: 740px) {
     .nav__bars-btn {
         display: block;
