--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -1,17 +1,12 @@
+.container {
+    max-width: 1140px;
+    margin: auto;
+}
 /* Css for header */
-
 .header {
-    background-image: url(../images/header/topbar.jpg);
+    background-image: url(../assets/images/photos/topbar.jpg);
     width: 100%;
     background-repeat: no-repeat;
-}
-
-.navbar__pc {
-    /* display: flex; */
-    justify-content: space-between;
-    max-width: 1120px;
-    margin: 0 auto;
-    display: none;
 }
 
 .navbar__logo img {
@@ -24,13 +19,13 @@
 .navbar__list {
     display: flex;
 }
-.navbar__list .navbar__item {
+.navbar__list .navbar__list-item {
     position: relative;
     display: inline-block;
     margin-right: 40px;
     cursor: pointer;
 }
-.navbar__list .navbar__item a {
+.navbar__list .navbar__list-item a {
     color: #4a4a4a;
     text-decoration: none;
     line-height: 100px;
@@ -38,66 +33,33 @@
     font-weight: 500;
     text-transform: uppercase;
 }
-.navbar__btn {
-    margin-top: 30px;
-}
-.navbar__btn button {
-    background: #ffffff;
-    border: 2px solid #4a4a4a;
-    border-radius: 89px;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: 0.12em;
-    height: 40px;
-    width: 124px;
-    font-size: 15px;
-    cursor: pointer;
-}
-/* mobile */
+
 .banner {
     display: flex;
     justify-content: space-between;
 }
-.navbar__mobile-logo img {
+.navbar__logo img {
     width: 160px;
     height: 40px;
     margin-top: 30px;
     margin-left: 20px;
     cursor: pointer;
 }
-.nav__bars-btn {
-    display: none;
-}
-.nav__overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: none;
-}
-.navbar__mobile {
-    position: fixed;
-    top: 29px;
-    right: 128px;
-    width: 120px;
-    max-width: 100%;
-    background-color: #fff;
-    box-shadow: 0px 2px 4px rgb(0 0 0 / 50%);
-    float: right;
-    text-align: center;
-    transform: translateX(250px);
+.navbar__bars {
+    display: block;
+    margin-top: 30px;
+    margin-right: 30px;
+    display: block;
 }
 
-.navbar__mobile-list {
-    position: relative;
-    display: inline-block;
+.navbar__list {
+    display: none;
     margin-right: 40px;
     cursor: pointer;
     margin-right: 20px;
 }
-
+.navbar__list .navbar__list-item {
+}
 .navbar__mobile-item a {
     color: #4a4a4a;
     text-decoration: none;
@@ -105,14 +67,6 @@
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
-}
-
-.nav__input:checked ~ .nav__overlay {
-    display: block;
-}
-
-.nav__input:checked ~ .navbar__mobile {
-    transform: translateX(127px);
 }
 
 .header__content {
@@ -181,7 +135,7 @@
     width: 348px;
     padding: 20px;
     margin-bottom: 25px;
-    background-image: url(../images/pick_your_plan/monthly.png);
+    background-image: url(../assets/images/photos/monthly.jpg);
     justify-content: center;
 }
 
@@ -230,29 +184,29 @@
     text-align: center;
 }
 
-.main__item-title {
+.main__how-it-works--title {
     max-width: 306px;
     margin: auto;
     letter-spacing: 0.01em;
 }
-.main__item-title h3 {
+.main__how-it-works--title h3 {
     font-family: "DMSerifText";
     margin-top: 20px;
     font-size: 30px;
     line-height: 39px;
     width: 94%;
 }
-.main__item-title p {
+.main__how-it-works--title p {
     font-family: "DMSans";
     font-size: 18px;
     line-height: 23px;
     margin-top: 15px;
 }
-.try-it-for__btn {
+.how-it-works__btn {
     margin: 90px 0px 100px 0px;
     text-align: center;
 }
-.content__how-it-works button {
+.how-it-works__btn button {
     font-family: "DMSans";
     font-weight: 700;
     font-size: 16px;
@@ -295,11 +249,11 @@
     letter-spacing: 0.01em;
     margin-top: 20px;
 }
-.follow-btn {
+.social-post__btn {
     margin: 90px 0px 100px 0px;
     text-align: center;
 }
-.follow-btn button {
+.social-post__btn button {
     font-family: "DMSans";
     font-weight: 700;
     font-size: 16px;
@@ -390,27 +344,6 @@
     letter-spacing: 0.12em;
 }
 @media (max-width: 740px) {
-    .nav__bars-btn {
-        display: block;
-        margin-top: 30px;
-        margin-right: 30px;
-        display: block;
-    }
-    .navbar__list {
-        display: none;
-    }
-    .navbar__btn {
-        display: none;
-    }
 }
 @media (min-width: 768px) {
-    .nav__bars-btn {
-        display: none;
-    }
-    .navbar__list {
-        display: block;
-    }
-    .navbar__btn {
-        display: none;
-    }
 }
