--- a/practice-two/styles/fonts.css
+++ b/practice-two/styles/fonts.css
@@ -1,8 +1,20 @@
 @font-face {
-    font-family: "DM Serif Text";
-    src: url("../fonts/DM_Sans/DMSans-Bold.ttf");
+    font-family: "DMSerifText";
+    src: url("../assets/fonts/DM_Serif_Text/DMSerifText-Regular.ttf");
 }
 @font-face {
-    font-family: "DM Sans";
-    src: url("../fonts/DM_Sans/DMSans-Regular.ttf");
+    font-family: "DMSans";
+    src: url("../assets/fonts/DM_Sans/DMSans-Bold.ttf");
+}
+@font-face {
+    font-family: "DMSans";
+    src: url("../assets/fonts/DM_Sans/DMSans-Medium.ttf");
+}
+@font-face {
+    font-family: "DMSans";
+    src: url("../assets/fonts/DM_Sans/DMSans-Regular.ttf");
+}
+@font-face {
+    font-family: "DMSerifDisplay";
+    src: url("../assets/fonts/DM_Serif_Display/DMSerifDisplay-Regular.ttf");
 }
