--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -5,10 +5,12 @@
 /* Css for header */
 .header {
     background-image: url(../assets/images/photos/topbar.jpg);
-    width: 100%;
+    /* width: 100%; */
     background-repeat: no-repeat;
 }
-
+.navbar {
+    display: block;
+}
 .navbar__logo img {
     width: 160px;
     height: 40px;
@@ -16,22 +18,19 @@
     margin-left: 20px;
     cursor: pointer;
 }
-.navbar__list {
-    display: flex;
-}
+
 .navbar__list .navbar__list-item {
-    position: relative;
     display: inline-block;
     margin-right: 40px;
     cursor: pointer;
 }
 .navbar__list .navbar__list-item a {
-    color: #4a4a4a;
+    color: #000;
     text-decoration: none;
-    line-height: 100px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 14px;
     text-transform: uppercase;
+    font-family: "DMSans";
+    font-weight: 600;
 }
 
 .banner {
@@ -51,12 +50,31 @@
     margin-right: 30px;
     display: block;
 }
-
-.navbar__list {
+.navbar__menu {
     display: none;
+}
+.navbar__list {
     margin-right: 40px;
     cursor: pointer;
     margin-right: 20px;
+}
+.navbar__btn {
+    margin-right: 20px;
+}
+.navbar__btn button {
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 13px;
+    text-align: center;
+    letter-spacing: 0.12em;
+    background: #ffffff;
+    border: 2px solid #4a4a4a;
+    box-sizing: border-box;
+    border-radius: 300px;
+    width: 105px;
+    height: 32px;
+    font-family: "DMSans";
+    font-weight: 600;
 }
 .navbar__list .navbar__list-item {
 }
@@ -270,7 +288,7 @@
     cursor: pointer;
     color: #fff;
 }
-/*  */
+/* CSS for footer */
 .footer-container {
     background: #eeeeee;
     border: 2px solid #c4c4c4;
@@ -345,5 +363,4 @@
 }
 @media (max-width: 740px) {
 }
-@media (min-width: 768px) {
-}
+/* tablet */
