--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -68,7 +68,7 @@
     font-size: 14px;
     line-height: 13px;
     text-align: center;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
     background: #ffffff;
     border: 2px solid #4a4a4a;
     box-sizing: border-box;
@@ -105,7 +105,7 @@
     font-family: "DMSans";
     font-size: 18px;
     line-height: 23px;
-    letter-spacing: 0.01em;
+    letter-spacing: 1px;
     margin-top: 28px;
 }
 .nav_btn-content {
@@ -119,7 +119,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 21px;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
     text-transform: uppercase;
     margin-top: 30px;
     cursor: pointer;
@@ -227,7 +227,7 @@
 .main__how-it-works--title {
     max-width: 306px;
     margin: auto;
-    letter-spacing: 0.01em;
+    letter-spacing: 1px;
 }
 .main__how-it-works--title h3 {
     font-family: "DMSerifText";
@@ -252,7 +252,7 @@
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
     text-transform: uppercase;
     background: #ffffff;
     border: 4px solid #ef8094;
@@ -287,7 +287,7 @@
     font-family: "DMSans";
     font-size: 22px;
     line-height: 29px;
-    letter-spacing: 0.01em;
+    letter-spacing: 1px;
     margin-top: 20px;
 }
 .social-post__btn {
@@ -300,7 +300,7 @@
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
     text-transform: uppercase;
     background: #ef8094;
     border: 4px solid #ef8094;
@@ -342,7 +342,7 @@
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
     width: 49%;
     margin-right: 1%;
 }
@@ -375,7 +375,7 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 18px;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
     display: flex;
     flex-direction: column;
 }
@@ -388,7 +388,7 @@
     font-weight: 600;
     font-size: 11px;
     line-height: 14px;
-    letter-spacing: 0.12em;
+    letter-spacing: 2px;
 }
 @media (max-width: 740px) {
 }
