--- a/practice-two/styles/main.css
+++ b/practice-two/styles/main.css
@@ -68,7 +68,7 @@
     font-size: 14px;
     line-height: 13px;
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     background: #ffffff;
     border: 2px solid #4a4a4a;
     box-sizing: border-box;
@@ -105,7 +105,7 @@
     font-family: "DMSans";
     font-size: 18px;
     line-height: 23px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     margin-top: 28px;
 }
 .nav_btn-content {
@@ -119,13 +119,14 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 21px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     margin-top: 30px;
     cursor: pointer;
 }
 .box__image {
     position: initial;
+    height: 297px;
 }
 .image__box--mobile {
     width: 300px;
@@ -227,7 +228,7 @@
 .main__how-it-works--title {
     max-width: 306px;
     margin: auto;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
 }
 .main__how-it-works--title h3 {
     font-family: "DMSerifText";
@@ -252,7 +253,7 @@
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     background: #ffffff;
     border: 4px solid #ef8094;
@@ -279,15 +280,15 @@
     flex-direction: column;
 }
 .main__social-post {
-    max-width: 306px;
-    margin: auto;
+    max-width: 338px;
+
     margin-top: 30px;
 }
 .main__social-post p {
     font-family: "DMSans";
     font-size: 22px;
     line-height: 29px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     margin-top: 20px;
 }
 .social-post__btn {
@@ -300,7 +301,7 @@
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     background: #ef8094;
     border: 4px solid #ef8094;
@@ -342,7 +343,7 @@
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     width: 49%;
     margin-right: 1%;
 }
@@ -375,7 +376,7 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 18px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     display: flex;
     flex-direction: column;
 }
@@ -388,7 +389,7 @@
     font-weight: 600;
     font-size: 11px;
     line-height: 14px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 @media (max-width: 740px) {
 }
@@ -485,6 +486,7 @@
     .list__social-post {
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
     }
     /* footer */
     .footer-container__top-side {
@@ -578,16 +580,19 @@
         width: 79%;
     }
     .content__main .main__how-it-works:nth-child(3) .main__how-it-works--title p {
-        width: 82%;
+        width: 83%;
     }
     /* Social post */
     .list__social-post {
         flex-wrap: nowrap;
         align-items: center;
-        justify-content: space-around;
     }
     .main__social-post {
-        margin-left: 23px;
+        margin-left: 25px;
+    }
+    .main__social-post p {
+        width: 323px;
+        font-size: 26px;
     }
     /* footer */
     .footer-container {
